--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcode.github.io/Discover-the-Confidence-of-Permanent-Hair-Removal-in-Corpus-Christi/">https://cloudstackcode.github.io/Discover-the-Confidence-of-Permanent-Hair-Removal-in-Corpus-Christi/</a><br>    
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/AmericanLAserMedspa/Discover+the+Confidence+of+Permanent+Hair+Removal+in+Corpus+Christi/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/AmericanLAserMedspa/Discover+the+Confidence+of+Permanent+Hair+Removal+in+Corpus+Christi/index.html</a><br>
+                <a target="_bLank" href="https://discover-the-confidence-of-git-74de11-cloudstackcodes-projects.vercel.app/">https://discover-the-confidence-of-git-74de11-cloudstackcodes-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://graceful-biscuit-8cbd8e.netlify.app/">https://graceful-biscuit-8cbd8e.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
